--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "axios": "^1.5.1",
+    "element-plus": "^2.4.1",
+    "swiper": "^11.0.2",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@types/node": "^20.8.8",
     "@vitejs/plugin-vue": "^4.2.3",
+    "less": "^4.2.0",
+    "prettier": "3.0.3",
     "typescript": "^5.0.2",
+    "unplugin-auto-import": "^0.16.7",
+    "unplugin-icons": "^0.17.1",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
   }
