--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "element-plus": "^2.4.1",
+    "less-loader": "^11.1.3",
     "swiper": "^11.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
