--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "less-loader": "^11.1.3",
     "swiper": "^11.0.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-waterfall-plugin-next": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20.8.8",
