--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.5.1",
     "element-plus": "^2.4.1",
     "less-loader": "^11.1.3",
+    "lodash": "^4.17.21",
     "swiper": "^11.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
